--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-freecodecamp",
-  "author": "Hanibal Girmay",
+  "author":"Hanibal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
